Closed Bug 135753 Opened 23 years ago Closed 23 years ago

Clicking on the animated new mail alert, doesn't take you to the right folder

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: mscott, Assigned: mscott)

Details

(Whiteboard: [ADT2 RTM])

Attachments

(1 file)

When the animated alert comes up, if you click on the link, it is supposed to take you to the first folder with new messages in it. Currently it always takes you to the INBOX of the first account with new mail. The fix is trivial. Patch coming up.
Attached patch the fixSplinter Review
The patch does two things: 1) When we first get the new mail notification, we think the messages are in the inbox because imap hasn't moved them (assuming a filter fires to move it to another folder). So we can't try to find the first folder with new mail when we first get the biff alert because it will always be the inbox. Instead, delay this calculation until the user clicks on the alert link. Both a perf win and a correctness win. 2) The second part of the fix involves the imap code which performs the moves when filters fire. If we are moving a new message to another folder, be sure to subtract that message from the # of new messages for the destination folder.
I needed a break from my presentation.....
Status: NEW → ASSIGNED
Keywords: nsbeta1
QA Contact: olgam → gchan
Discussed in Mail News bug mtg with Engineering QA and PjM. Decided to ADT2 and plus this bug.
Keywords: nsbeta1nsbeta1+
Whiteboard: [ADT2]
Target Milestone: --- → mozilla1.0
Comment on attachment 77880 [details] [diff] [review] the fix What about pop3 ? one minor nit, if (oldNewMessageCount >= numKeysToAdd) + oldNewMessageCount -= numKeysToAdd; can be just if (oldNewMessageCount > numKeysToAdd)
This change isn't needed for pop3 because of how pop3 actually works. The message is actually moved to the right folder before we go and set the number of new messages on the folder. So we don' get into this scenario where the inbox and the destination folder both think they have new messages for pop.
Comment on attachment 77880 [details] [diff] [review] the fix ok, right, r=naving
Attachment #77880 - Flags: review+
Comment on attachment 77880 [details] [diff] [review] the fix sr=bienvenu - wow, I'm surprised that was broken all this time.
Attachment #77880 - Flags: superreview+
This has been checked into the. Leaving open until I get it into the moz 1.0 branch.
keyword pixie dust to put on the adt1.0.0 radar
Keywords: adt1.0.0
Pls Note: You can mark this one as Resolved/Fixed once it hits the trunk. The ADT looks for ALL bugs with adt1.0.0 keyword (Reolved or Open). When bugs are fixed on the 1.0 branch, pls replace adt1.0.0+ with fixed1.0.0 keyword. After QA has verified the fix is in the branch, pls replace fixed1.0.0, with verified1.0.0.
This should be marked fixed since it is fixed on the trunk. Once QA has had a chance to look at it I'll petition drivers for the branch.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
adding adt1.0.0-. We can ship the beta without this. Let's get this into RTM.
Keywords: adt1.0.0adt1.0.0-
Whiteboard: [ADT2] → [ADT2 RTM]
Using commercial trunk 2002-04-16-06-trunk (2002041603) on NT, 2k, xp, and win98 For Imap mail accounts only, verified that when the alert pops up it takes you to the first folder with new mesgs in it. Tried filtered folders and when a new mesg arrived and I clicked on the link, it took you to the filtered folder. Verified on trunk
According to mscott, this patch is needed for 123104 which we want, so I'm going to adt1.0.0+ this.
Keywords: adt1.0.0-adt1.0.0+
Comment on attachment 77880 [details] [diff] [review] the fix a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #77880 - Flags: approval+
marking as verified so mscott can land on branch. Added two minor bugs that are related to this bug bug 138106 & bug 138109 (pop version of this bug).
Status: RESOLVED → VERIFIED
fixed on the branch.
Keywords: adt1.0.0+fixed1.0.0
using commercial branch: 2002-04-23-08-1.0.0 nt 4.0, XP, 2k 2002-04-20-08-1.0.0 win98 verified on branch: -clicking on alert for imap,webmail, or aol account takes you to right folder -clicking on alert for a new mesg in a filtered folder takes you to that filtered folder replacing fixed1.0.0 w/verified 1.0.0 in keyword area.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: