Bug #135753 --> figure out the folder to select when the user clicks on the animated alert to ensure that we select the right folder. Bug #135756 --> Only show the animated alert for the first account with new mail.

r=naving
sr=bienvenu